build: Fix -Werror build for clang

This fixes implicit enumeration type conversion.

https://bugzilla.gnome.org/show_bug.cgi?id=750480